[package]
name = "graphific"
version = "0.1.0"
license = "MIT"
authors = ["Haxos <a.mayocartes@protonmail.com>"]
edition = "2018"
keywords = ["graph", "data-structures", "graph-algorithm"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "0.6.1"

[dependencies]
